--- a/code/alibaba/pubspec.yaml
+++ b/code/alibaba/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   provider: ^6.0.0
   gap: ^3.0.0
   get: ^4.6.5
-
+  counter: ^0.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
